# rplayer

./: Cargo.toml  README.md
src/: app.rs  main.rs
src/app/: pipeline.rs
